--- a/index.html
+++ b/index.html
@@ -3,152 +3,159 @@
 
 
 <head>
-<meta charset="utf-8">
-<title>Freelancer</title>
-<meta name="description" content="">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700|Montserrat:700">
-<link rel="stylesheet" type="text/css" href="css/normalize.css">
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-<script src="https://use.fontawesome.com/64906f59e1.js"></script>
+	<meta charset="utf-8">
+	<title>Freelancer</title>
+	<meta name="description" content="">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700|Montserrat:700">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<script src="https://use.fontawesome.com/64906f59e1.js"></script>
 </head>
 <body>
-<header>
+	<header>
 
-<div class="bouton">
-<p>
-FREELANCER
-</p>
-
-
-<nav id="navigation">
-<a href="#" title="about"><strong>about</strong></a>
-<a href="#" title="work"><strong>work</strong></a>
-<a href="#" title="portfolio"><strong> portfolio</strong></a>
-<a href="#" title="contact"><strong>contact</strong></a>
-</nav>
-</div>
-
-<section class="titre">
-<h1> INTELLIGENCE <span>IS NOTHING WITHOUT</span>AMBITION </h1>
-<p>We are small but impressive creative agency</p>
-
-<div class="read">
-<p>
-<a href="#">read more</a>
-</p>
-</div>
-</section>
-
-</header>
-<main>
-
-<div class="colone">
-<section class="article">
-<h3>PEACE <span>OF MIND</span></h3>
-<p>You're safe with us. The privacy and security of your financial information is our top priority.</p>
-<div class="More1">
-<p>
-<a href="#">More</a>
-</p>
-</div>
-
-</section>
+		<div class="bouton">
+			<p>
+				FREELANCER
+			</p>
 
 
+			<nav id="navigation">
+				<a href="#" title="about">ABOUT</a>
+				<a href="#" title="work">WORK</a>
+				<a href="#" title="portfolio">PORTFOLIO</a>
+				<a href="#" title="contact">CONTACT</a>
+				<a><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    <a><i class="fa fa-facebook" aria-hidden="true"></i></a>
+			</nav>
+		</div>
 
-<section class="article">
+		<section class="titre">
+			<h1> INTELLIGENCE <span>IS NOTHING WITHOUT</span>AMBITION </h1>
+			<p>We are small but impressive creative agency</p>
 
-<h3> FREE <span>ACTUALLY FREE</span> </h3>
-<p> No more pricing grids. No more fince print.Sending and receving cash is free without gimmicks.
-</p>
+			<div class="read">
+				<p>
+					<a>READ MORE</a>
+				</p>
+			</div>
+		</section>
 
-<div class="More2">
-<p>
-<a href="#">More</a>
-</p>
-</div>
-</section>
+	</header>
+	<main>
 
-<section class="article">
+		<div class="colone">
+			<section class="article">
+				<h3>PEACE <span>OF MIND</span></h3>
+				<p>You're safe with us. The privacy and security of your financial information is our top priority.</p>
+				<div class="More1">
+					<p>
+						<a>More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+					</p>
+				</div>
 
-<h3>SIMPLE<span> PAYMENTS </span></h3>
-<p>The same debit card you use to buy coffee lets deposit money straight to your bank acount.</p>
+			</section>
 
 
 
-<div class="More3">
-<p>
-<a href="#">More</a>
-</p>
-</div>
-</section>
-</div>
+			<section class="article">
 
-<section class="portfolio">
-<div> <img src="images/macbook.jpg" alt="ordinateur macbook"> </div>
-<div class="text">
-<h2>PORTFOLIO</h2>
+				<h3> FREE <span>ACTUALLY FREE</span> </h3>
+				<p> No more pricing grids. No more fince print.Sending and receving cash is free without gimmicks.
+				</p>
 
-<p>We are small but strong team</p>
-<p>No more pricing grids.No more fine print.<span>Sending and receiving cash is free without gimmmicks.</span></p>
-<p> The same debit card you use to buy coffee lets <span> deposit money straight to your bank account.</span></p>
-<a href="#">More</a>
-</div>
+				<div class="More2">
+					<p>
+						<a>More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+					</p>
+				</div>
+			</section>
 
+			<section class="article">
 
-
-</section>
-
-<section class="OurTeam">
-
-
-<h2>OUR TEAM</h2>
-<p> They are big but still friendly.</p>
-
-
-<div class="presentation">
-<span>
-<img src="images/joey.jpg" alt="Joey">
-</span>
-
-<div class="element">
-<h4>JOEY</h4>
-<p>web developer</p>
-<p> Coffee lover. Always on Bikte. IPhone fan.</p>
-</div>
-
-
-<span>
-<img src="images/matt.jpg" alt="Matt">
-</span>
-<div class="element">
-<h4>MATT</h4>
-<p>Web designer</p>
-<p> MTB Biker. Photoshop Master. Loving Father.</p>
-</div>
+				<h3>SIMPLE<span> PAYMENTS </span></h3>
+				<p>The same debit card you use to buy coffee lets deposit money straight to your bank acount.</p>
 
 
 
+				<div class="More3">
+					<p><a>More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
 
-<span>
-<img src="images/mike.jpg" alt="Mike">
-</span>
+				</div>
+			</section>
+		</div>
 
-<div class="element">
-<h4>MIKE</h4>
-<p>Copywriter</p>
-<p>Drummer. Soup lover.Beer Drinker. Cyclist.</p>
-</div>
+		<section class="portfolio">
+			<div> <img src="images/macbook.jpg" alt="ordinateur macbook"> </div>
+			<div class="text">
+				<h2>PORTFOLIO</h2>
+
+				<p>We are small but strong team</p>
+				<p>No more pricing grids.No more fine print.<span>Sending and receiving cash is free without gimmmicks.</span></p>
+				<p> The same debit card you use to buy coffee lets <span> deposit money straight to your bank account.</span></p>
+				<a>More <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </a>
+			</div>
+
+
+
+		</section>
+
+		<section class="OurTeam">
+
+
+			<h2>OUR TEAM</h2>
+			<p> They are big but still friendly.</p>
+
+
+			<div class="presentation">
+				<span>
+					<img src="images/joey.jpg" alt="Joey">
+				</span>
+
+				<div class="element">
+					<h4>JOEY</h4>
+					<p>Web developer</p>
+					<p> Coffee lover. Always on Bikte. IPhone fan.</p>
+				</div>
+
+
+				<span>
+					<img src="images/matt.jpg" alt="Matt">
+				</span>
+				<div class="element">
+					<h4>MATT</h4>
+					<p>Web designer</p>
+					<p> MTB Biker. Photoshop Master. Loving Father.</p>
+				</div>
 
 
 
 
-</div>
-</section>
+				<span>
+					<img src="images/mike.jpg" alt="Mike">
+				</span>
 
-<footer>
-<p> Freelancer </p>
-</footer>	
+				<div class="element">
+					<h4>MIKE</h4>
+					<p>Copywriter</p>
+					<p>Drummer. Soup lover.Beer Drinker. Cyclist.</p>
+				
+				 <div><a class=moree>More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></div>
+				</div>
+
+ 
+			
+		</section>
+
+		<footer>
+			
+			<div><a><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    <a><i class="fa fa-facebook" aria-hidden="true"></i></a>
+    <a class="insta"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+    <a><i class="fa fa-google-plus" aria-hidden="true"></i></a></div>
+
+    <div><p> &copy;Freelancer </p></div>
+		</footer>	
 
 
 
@@ -156,7 +163,7 @@ FREELANCER
 
 
 
-</main>	
+	</main>	
 
 </body>
 </html>
